--- a/index.html
+++ b/index.html
@@ -63,13 +63,90 @@
 
     <div id="main">
         <div class="container">
-            <table class="table">
-                <tr>
-                    <td>
-                        <img src="Assets\call_logo.png" class="call"><h6>Free Calling</h6>
-                    </td>
-                </tr>
-            </table>
+            <!-- App 1 -->
+            <div class="row py-1">
+                <div class="col-1 py-2 app_icon">
+                    <i class="fa-solid fa-square-phone btn btn-lg" style="color: green;"></i>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <span class="app_name">Free Calling</span>
+                    </div>
+                    <div class="row">
+                        <span>Tool.</span>
+                    </div>
+                    <div class="row">
+                        <span>4.8&#9733; 49.8 MB</span>
+                    </div>
+                </div>
+                <div class="col-2 py-2" style="text-align: end;">
+                    <button class="btn btn-primary btn-lg install_btn">Install</button>
+                </div>
+            </div>
+            <hr>
+            <!-- App 2 -->
+            <div class="row py-1">
+                <div class="col-1 py-2 app_icon">
+                    <i class="fa-brands fa-google-play btn btn-lg" style="color: blue;"></i>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <span class="app_name">Fake playStore</span>
+                    </div>
+                    <div class="row">
+                        <span>App.</span>
+                    </div>
+                    <div class="row">
+                        <span>4.1&#9733; 3.6 MB</span>
+                    </div>
+                </div>
+                <div class="col-2 py-2" style="text-align: end;">
+                    <button class="btn btn-primary btn-lg install_btn">Install</button>
+                </div>
+            </div>
+            <hr>
+            <!-- App 3 -->
+            <div class="row py-1">
+                <div class="col-1 py-2 app_icon">
+                    <i class="fa-solid fa-user-secret btn btn-lg"></i>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <span class="app_name">Color Mod</span>
+                    </div>
+                    <div class="row">
+                        <span>Tool.</span>
+                    </div>
+                    <div class="row">
+                        <span>3.9&#9733; 10 MB</span>
+                    </div>
+                </div>
+                <div class="col-2 py-2" style="text-align: end;">
+                    <button class="btn btn-primary btn-lg install_btn">Install</button>
+                </div>
+            </div>
+            <hr>
+            <!-- App 4 -->
+            <div class="row py-1">
+                <div class="col-1 py-2 app_icon">
+                    <i class="fa-solid fa-n btn btn-lg" style="color: red;"></i>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <span class="app_name">Netflix Mod</span>
+                    </div>
+                    <div class="row">
+                        <span>Entertainment.</span>
+                    </div>
+                    <div class="row">
+                        <span>4.5&#9733; 30 MB</span>
+                    </div>
+                </div>
+                <div class="col-2 py-2" style="text-align: end;">
+                    <button class="btn btn-primary btn-lg install_btn">Install</button>
+                </div>
+            </div>
+            <hr>
         </div>
     </div>
 </body>
