--- a/index.html
+++ b/index.html
@@ -144,5 +144,22 @@
             <hr>
         </div>
     </div>
+
+    <center>
+        <div id="install_window">
+            <h2 class="to_download" style="color: blueviolet;">To Download</h2>
+
+            <button class="join_telegram" onclick="redirect_to_telegram()"><i class="fa-brands fa-telegram"></i> Join Telegram</button>
+            <br><br>
+            <button class="join_instagram" onclick="redirect_to_instagram()"><i class="fa-brands fa-instagram"></i> Join Instagram</button>
+            <br><br>
+            <button class="subscribe_youtube" onclick="redirect_to_youtube()"><i class="fa-brands fa-youtube"></i> Subscribe to Youtube</button>
+            <br><br>
+            <button class="download_app">Download</button>
+            <br><br>
+        </div>
+    </center>
+    <div class="overlay"></div>
+<script src="script.js"></script>
 </body>
 </html>
