--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
 
     <div id="main">
-        <div class="container">
+        <div class="container-fluid">
             <!-- App 1 -->
             <div class="row py-1">
                 <div class="col-1 py-2 app_icon">
@@ -149,11 +149,11 @@
         <div id="install_window">
             <h2 class="to_download" style="color: blueviolet;">To Download</h2>
 
-            <button class="join_telegram" onclick="redirect_to_telegram()"><i class="fa-brands fa-telegram"></i> Join Telegram</button>
+            <button class="join_telegram"><i class="fa-brands fa-telegram"></i> Join Telegram</button>
             <br><br>
-            <button class="join_instagram" onclick="redirect_to_instagram()"><i class="fa-brands fa-instagram"></i> Join Instagram</button>
+            <button class="join_instagram"><i class="fa-brands fa-instagram"></i> Join Instagram</button>
             <br><br>
-            <button class="subscribe_youtube" onclick="redirect_to_youtube()"><i class="fa-brands fa-youtube"></i> Subscribe to Youtube</button>
+            <button class="subscribe_youtube"><i class="fa-brands fa-youtube"></i> Subscribe to Youtube</button>
             <br><br>
             <button class="download_app">Download</button>
             <br><br>
