--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
             <br><br>
             <button class="download_app">Download</button>
             <br><br>
+
+            <div class="progress_container">
+                <div class="progress_bar"></div>
+            </div>
         </div>
     </center>
     <div class="overlay"></div>
