--- a/index.html
+++ b/index.html
@@ -142,6 +142,48 @@
                 </div>
             </div>
             <hr>
+            <!-- App 5 -->
+            <div class="row py-1">
+                <div class="col-1 py-2 app_icon">
+                    <i class="fa-solid fa-globe btn btn-lg" style="color: rgb(29, 249, 51);"></i>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <span class="app_name">Interent Mod</span>
+                    </div>
+                    <div class="row">
+                        <span>Tool.</span>
+                    </div>
+                    <div class="row">
+                        <span>4.8&#9733; 28 MB</span>
+                    </div>
+                </div>
+                <div class="col-2 py-2" style="text-align: end;">
+                    <button class="btn btn-primary btn-lg install_btn">Install</button>
+                </div>
+            </div>
+            <hr>
+            <!-- App 6 -->
+            <div class="row py-1">
+                <div class="col-1 py-2 app_icon">
+                    <i class="fa-solid fa-headset btn btn-lg" style="color: rgb(18, 73, 251);"></i>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <span class="app_name">True Caller</span>
+                    </div>
+                    <div class="row">
+                        <span>Communication.</span>
+                    </div>
+                    <div class="row">
+                        <span>4.2&#9733; 60 MB</span>
+                    </div>
+                </div>
+                <div class="col-2 py-2" style="text-align: end;">
+                    <button class="btn btn-primary btn-lg install_btn">Install</button>
+                </div>
+            </div>
+            <hr>
         </div>
     </div>
 
