--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                             </button>
                         </li>
                         <li>
-                            <button class="dropdown-item bars">
+                            <button class="dropdown-item bars blog">
                                 <i class="fa-solid fa-blog" style="margin-right: 20px;"></i>Blog
                             </button>
                         </li>
                         <li>
-                            <button class="dropdown-item bars">
+                            <button class="dropdown-item bars help">
                                 <i class="fa-solid fa-circle-info" style="margin-right: 20px;"></i>Help
                             </button>
                         </li>
@@ -142,6 +142,48 @@
                 </div>
             </div>
             <hr>
+            <!-- App 5 -->
+            <div class="row py-1">
+                <div class="col-1 py-2 app_icon">
+                    <i class="fa-solid fa-globe btn btn-lg" style="color: rgb(29, 249, 51);"></i>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <span class="app_name">Interent Mod</span>
+                    </div>
+                    <div class="row">
+                        <span>Tool.</span>
+                    </div>
+                    <div class="row">
+                        <span>4.8&#9733; 28 MB</span>
+                    </div>
+                </div>
+                <div class="col-2 py-2" style="text-align: end;">
+                    <button class="btn btn-primary btn-lg install_btn">Install</button>
+                </div>
+            </div>
+            <hr>
+            <!-- App 6 -->
+            <div class="row py-1">
+                <div class="col-1 py-2 app_icon">
+                    <i class="fa-solid fa-headset btn btn-lg" style="color: rgb(18, 73, 251);"></i>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <span class="app_name">True Caller</span>
+                    </div>
+                    <div class="row">
+                        <span>Communication.</span>
+                    </div>
+                    <div class="row">
+                        <span>4.2&#9733; 60 MB</span>
+                    </div>
+                </div>
+                <div class="col-2 py-2" style="text-align: end;">
+                    <button class="btn btn-primary btn-lg install_btn">Install</button>
+                </div>
+            </div>
+            <hr>
         </div>
     </div>
 
@@ -151,12 +193,16 @@
 
             <button class="join_telegram"><i class="fa-brands fa-telegram"></i> Join Telegram</button>
             <br><br>
-            <button class="join_instagram"><i class="fa-brands fa-instagram"></i> Join Instagram</button>
+            <button class="join_instagram"><i class="fa-brands fa-instagram"></i> Follow Instagram</button>
             <br><br>
             <button class="subscribe_youtube"><i class="fa-brands fa-youtube"></i> Subscribe to Youtube</button>
             <br><br>
             <button class="download_app">Download</button>
             <br><br>
+
+            <div class="progress_container">
+                <div class="progress_bar"></div>
+            </div>
         </div>
     </center>
     <div class="overlay"></div>
