--- a/Help.html
+++ b/Help.html
@@ -59,8 +59,9 @@
     <div id="main">
         <div class="container">
             <div class="row">
-                <u><h2 style="margin-top: 20px;">How to install from IModdy?</h2></u>
+                <h2 style="margin-top: 20px;">How to install from IModdy?</h2>
             </div>
+            <hr>
             <br>
             <div class="row">
                 <div class="col">
@@ -115,7 +116,6 @@
                         </ul>
                     </ul>
                 </div>
-                <hr>
                 <br>
             </div>
         </div>
