--- a/Help.html
+++ b/Help.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>j
     
     <div id="main">
         <div class="container">
