--- a/index.html
+++ b/index.html
@@ -184,6 +184,111 @@
                 </div>
             </div>
             <hr>
+            <!-- App 7 -->
+            <div class="row py-1">
+                <div class="col-1 py-2 app_icon">
+                    <i class="fa-solid fa-money-bill-1-wave btn btn-lg" style="color: blueviolet;"></i>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <span class="app_name">Fake PhonePay</span>
+                    </div>
+                    <div class="row">
+                        <span>Tool.</span>
+                    </div>
+                    <div class="row">
+                        <span>4.7&#9733; 10 MB</span>
+                    </div>
+                </div>
+                <div class="col-2 py-2" style="text-align: end;">
+                    <button class="btn btn-primary btn-lg install_btn">Install</button>
+                </div>
+            </div>
+            <hr>
+            <!-- App 8 -->
+            <div class="row py-1">
+                <div class="col-1 py-2 app_icon">
+                    <i class="fa-brands fa-square-youtube btn btn-lg" style="color: red"></i>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <span class="app_name">Youtube Premium</span>
+                    </div>
+                    <div class="row">
+                        <span>Entertainment.</span>
+                    </div>
+                    <div class="row">
+                        <span>4.9&#9733; 95 MB</span>
+                    </div>
+                </div>
+                <div class="col-2 py-2" style="text-align: end;">
+                    <button class="btn btn-primary btn-lg install_btn">Install</button>
+                </div>
+            </div>
+            <hr>
+            <!-- App 9 -->
+            <div class="row py-1">
+                <div class="col-1 py-2 app_icon">
+                    <i class="fa-solid fa-envelope-open-text btn btn-lg" style="color:indigo;"></i>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <span class="app_name">Message Bombing</span>
+                    </div>
+                    <div class="row">
+                        <span>Tool.</span>
+                    </div>
+                    <div class="row">
+                        <span>4.7&#9733; 15 MB</span>
+                    </div>
+                </div>
+                <div class="col-2 py-2" style="text-align: end;">
+                    <button class="btn btn-primary btn-lg install_btn">Install</button>
+                </div>
+            </div>
+            <hr>
+            <!-- App 10 -->
+            <div class="row py-1">
+                <div class="col-1 py-2 app_icon">
+                    <i class="fa-solid fa-phone-volume btn btn-lg" style="color: rgb(18, 73, 251);"></i>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <span class="app_name">Call Bombing</span>
+                    </div>
+                    <div class="row">
+                        <span>Tool.</span>
+                    </div>
+                    <div class="row">
+                        <span>4.6&#9733; 17 MB</span>
+                    </div>
+                </div>
+                <div class="col-2 py-2" style="text-align: end;">
+                    <button class="btn btn-primary btn-lg install_btn">Install</button>
+                </div>
+            </div>
+            <hr>
+            <!-- App 11 -->
+            <div class="row py-1">
+                <div class="col-1 py-2 app_icon">
+                    <i class="fa-solid fa-calculator btn btn-lg" style="color: gray"></i>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <span class="app_name">Multi functional Calc</span>
+                    </div>
+                    <div class="row">
+                        <span>Tool.</span>
+                    </div>
+                    <div class="row">
+                        <span>3.7&#9733; 23 MB</span>
+                    </div>
+                </div>
+                <div class="col-2 py-2" style="text-align: end;">
+                    <button class="btn btn-primary btn-lg install_btn">Install</button>
+                </div>
+            </div>
+            <hr>
         </div>
     </div>
 
