--- a/index.html
+++ b/index.html
@@ -292,6 +292,16 @@
         </div>
     </div>
 
+    <div id="footer">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <button class="btn btn-secondary btn-lg back_to_top"><i class="fa-solid fa-arrow-up"></i></button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <center>
         <div id="install_window">
             <h2 class="to_download" style="color: blueviolet;">To Download</h2>
