extra apps and to top button

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <!-- App 1 -->
             <div class="row py-1">
                 <div class="col-1 py-2 app_icon">
-                    <i class="fa-solid fa-square-phone btn btn-lg" style="color: green;"></i>
+                    <i class="fa-solid fa-square-phone fa-2xl btn" style="color: green;"></i>
                 </div>
                 <div class="col-9">
                     <div class="row">
@@ -82,7 +82,7 @@
             <!-- App 2 -->
             <div class="row py-1">
                 <div class="col-1 py-2 app_icon">
-                    <i class="fa-brands fa-google-play btn btn-lg" style="color: blue;"></i>
+                    <i class="fa-brands fa-google-play fa-2xl btn" style="color: blue;"></i>
                 </div>
                 <div class="col-9">
                     <div class="row">
@@ -103,7 +103,7 @@
             <!-- App 3 -->
             <div class="row py-1">
                 <div class="col-1 py-2 app_icon">
-                    <i class="fa-solid fa-user-secret btn btn-lg"></i>
+                    <i class="fa-solid fa-user-secret fa-2xl btn"></i>
                 </div>
                 <div class="col-9">
                     <div class="row">
@@ -124,7 +124,7 @@
             <!-- App 4 -->
             <div class="row py-1">
                 <div class="col-1 py-2 app_icon">
-                    <i class="fa-solid fa-n btn btn-lg" style="color: red;"></i>
+                    <i class="fa-solid fa-n fa-2xl btn" style="color: red;"></i>
                 </div>
                 <div class="col-9">
                     <div class="row">
@@ -145,7 +145,7 @@
             <!-- App 5 -->
             <div class="row py-1">
                 <div class="col-1 py-2 app_icon">
-                    <i class="fa-solid fa-globe btn btn-lg" style="color: rgb(29, 249, 51);"></i>
+                    <i class="fa-solid fa-globe fa-2xl btn" style="color: rgb(29, 249, 51);"></i>
                 </div>
                 <div class="col-9">
                     <div class="row">
@@ -166,7 +166,7 @@
             <!-- App 6 -->
             <div class="row py-1">
                 <div class="col-1 py-2 app_icon">
-                    <i class="fa-solid fa-headset btn btn-lg" style="color: rgb(18, 73, 251);"></i>
+                    <i class="fa-solid fa-headset fa-2xl btn" style="color: rgb(18, 73, 251);"></i>
                 </div>
                 <div class="col-9">
                     <div class="row">
@@ -187,7 +187,7 @@
             <!-- App 7 -->
             <div class="row py-1">
                 <div class="col-1 py-2 app_icon">
-                    <i class="fa-solid fa-money-bill-1-wave btn btn-lg" style="color: blueviolet;"></i>
+                    <i class="fa-solid fa-money-bill-1-wave fa-2xl btn" style="color: blueviolet;"></i>
                 </div>
                 <div class="col-9">
                     <div class="row">
@@ -208,7 +208,7 @@
             <!-- App 8 -->
             <div class="row py-1">
                 <div class="col-1 py-2 app_icon">
-                    <i class="fa-brands fa-square-youtube btn btn-lg" style="color: red"></i>
+                    <i class="fa-brands fa-square-youtube fa-2xl btn" style="color: red"></i>
                 </div>
                 <div class="col-9">
                     <div class="row">
@@ -229,7 +229,7 @@
             <!-- App 9 -->
             <div class="row py-1">
                 <div class="col-1 py-2 app_icon">
-                    <i class="fa-solid fa-envelope-open-text btn btn-lg" style="color:indigo;"></i>
+                    <i class="fa-solid fa-envelope-open-text fa-2xl btn" style="color:indigo;"></i>
                 </div>
                 <div class="col-9">
                     <div class="row">
@@ -250,7 +250,7 @@
             <!-- App 10 -->
             <div class="row py-1">
                 <div class="col-1 py-2 app_icon">
-                    <i class="fa-solid fa-phone-volume btn btn-lg" style="color: rgb(18, 73, 251);"></i>
+                    <i class="fa-solid fa-phone-volume fa-2xl btn" style="color: rgb(18, 73, 251);"></i>
                 </div>
                 <div class="col-9">
                     <div class="row">
@@ -271,7 +271,7 @@
             <!-- App 11 -->
             <div class="row py-1">
                 <div class="col-1 py-2 app_icon">
-                    <i class="fa-solid fa-calculator btn btn-lg" style="color: gray"></i>
+                    <i class="fa-solid fa-calculator fa-2xl btn" style="color: gray"></i>
                 </div>
                 <div class="col-9">
                     <div class="row">
@@ -289,6 +289,121 @@
                 </div>
             </div>
             <hr>
+            <!-- App 12 -->
+            <div class="row py-1">
+                <div class="col-1 py-2 app_icon">
+                    <i class="fa-solid fa-box fa-2xl btn btn-lg" style="color: rgb(35, 35, 247)"></i>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <span class="app_name">TeraBox Premium</span>
+                    </div>
+                    <div class="row">
+                        <span>Entertainment.</span>
+                    </div>
+                    <div class="row">
+                        <span>4.8&#9733; 73 MB</span>
+                    </div>
+                </div>
+                <div class="col-2 py-2" style="text-align: end;">
+                    <button class="btn btn-primary btn-lg install_btn">Install</button>
+                </div>
+            </div>
+            <hr>
+            <!-- App 13 -->
+            <div class="row py-1">
+                <div class="col-1 py-2 app_icon">
+                    <i class="fa-solid fa-hockey-puck fa-2xl btn btn-lg" style="color: green"></i>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <span class="app_name">DiuWin</span>
+                    </div>
+                    <div class="row">
+                        <span>Games.</span>
+                    </div>
+                    <div class="row">
+                        <span>3.8&#9733; 63 MB</span>
+                    </div>
+                </div>
+                <div class="col-2 py-2" style="text-align: end;">
+                    <button class="btn btn-primary btn-lg install_btn">Install</button>
+                </div>
+            </div>
+            <hr>
+            <!-- App 14 -->
+            <div class="row py-1">
+                <div class="col-1 py-2 app_icon">
+                    <i class="fa-solid fa-bahai fa-2xl btn btn-lg" style="color: rgb(12, 240, 61);"></i>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <span class="app_name">Daman</span>
+                    </div>
+                    <div class="row">
+                        <span>Games.</span>
+                    </div>
+                    <div class="row">
+                        <span>3.6&#9733; 56 MB</span>
+                    </div>
+                </div>
+                <div class="col-2 py-2" style="text-align: end;">
+                    <button class="btn btn-primary btn-lg install_btn">Install</button>
+                </div>
+            </div>
+            <hr>
+            <!-- App 15 -->
+            <div class="row py-1">
+                <div class="col-1 py-2 app_icon">
+                    <i class="fa-solid fa-earth-americas fa-2xl btn btn-lg" style="color: rgb(255, 89, 0);"></i>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <span class="app_name">Ok Win</span>
+                    </div>
+                    <div class="row">
+                        <span>Games.</span>
+                    </div>
+                    <div class="row">
+                        <span>3.9&#9733; 65 MB</span>
+                    </div>
+                </div>
+                <div class="col-2 py-2" style="text-align: end;">
+                    <button class="btn btn-primary btn-lg install_btn">Install</button>
+                </div>
+            </div>
+            <hr>
+            <!-- App 16 -->
+            <div class="row py-1">
+                <div class="col-1 py-2 app_icon">
+                    <i class="fa-solid fa-graduation-cap fa-2xl btn btn-lg"></i>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <span class="app_name">PW Unlocked</span>
+                    </div>
+                    <div class="row">
+                        <span>Education.</span>
+                    </div>
+                    <div class="row">
+                        <span>4.6&#9733; 76 MB</span>
+                    </div>
+                </div>
+                <div class="col-2 py-2" style="text-align: end;">
+                    <button class="btn btn-primary btn-lg install_btn">Install</button>
+                </div>
+            </div>
+            <hr>
+        </div>
+    </div>
+
+    <div id="footer">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <button class="btn btn-primary to_top"><i class="fa-solid fa-arrow-up"></i></button>
+                </div>
+            </div>
         </div>
     </div>
 
