--- a/blog.html
+++ b/blog.html
@@ -55,6 +55,19 @@
             </div>
         </div>
     </div>
+
+    <div id="main">
+        <div class="container-fluid">
+            <div class="row">
+                <h3 style="margin-top: 20px;"><b>Blogs</b></h3>
+            </div>
+            <hr>
+            <br>
+            <div class="row">
+                <p style="margin-bottom: 20px; color: gray">No Blogs Yet</p>
+            </div>
+        </div>
+    </div>
 <script src="script_blog.js"></script>
 </body>
 </html>
