scroll to top btn

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 </div>
                 <div class="col-9">
                     <div class="row">
-                        <span class="app_name">Fake PhonePay</span>
+                        <span class="app_name">PhonePay</span>
                     </div>
                     <div class="row">
                         <span>Tool.</span>
@@ -394,16 +394,6 @@
                 </div>
             </div>
             <hr>
-        </div>
-    </div>
-
-    <div id="footer">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col">
-                    <button class="btn btn-primary to_top"><i class="fa-solid fa-arrow-up"></i></button>
-                </div>
-            </div>
         </div>
     </div>
 
