--- a/Help.html
+++ b/Help.html
@@ -120,6 +120,17 @@
             </div>
         </div>
     </div>
+
+    <div id="footer">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <button class="btn btn-secondary btn-lg back_to_top"><i class="fa-solid fa-arrow-up"></i></button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 <script src="script_help.js"></script>
 </body>
 </html>
