--- a/index.html
+++ b/index.html
@@ -400,8 +400,11 @@
     <div id="footer">
         <div class="container-fluid">
             <div class="row">
-                <div class="col">
+                <div class="col-1">
                     <button class="btn btn-secondary btn-lg back_to_top"><i class="fa-solid fa-arrow-up"></i></button>
+                </div>
+                <div class="col-11">
+                    <h6 class="foot_line">@For learning purpose</h6>
                 </div>
             </div>
         </div>
