--- a/index.html
+++ b/index.html
@@ -394,6 +394,27 @@
                 </div>
             </div>
             <hr>
+            <!-- App 17 -->
+            <div class="row py-1">
+                <div class="col-1 py-2 app_icon">
+                    <i class="fa-solid fa-flag-checkered fa-2xl btn btn-lg" style="color: rgb(176, 23, 53);"></i>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <span class="app_name">Tiranga VIP</span>
+                    </div>
+                    <div class="row">
+                        <span>Games.</span>
+                    </div>
+                    <div class="row">
+                        <span>3.6&#9733; 13.5 MB</span>
+                    </div>
+                </div>
+                <div class="col-2 py-2" style="text-align: end;">
+                    <button class="btn btn-primary btn-lg install_btn">Install</button>
+                </div>
+            </div>
+            <hr>
         </div>
     </div>
 
