--- a/index.html
+++ b/index.html
@@ -435,9 +435,9 @@
         <div id="install_window">
             <h2 class="to_download" style="color: blueviolet;">To Download</h2>
 
-            <button class="join_telegram"><i class="fa-brands fa-telegram"></i> Join Telegram</button>
+            <button class="join_instagram_1"><i class="fa-brands fa-instagram"></i> Follow Instagram-1</button>
             <br><br>
-            <button class="join_instagram"><i class="fa-brands fa-instagram"></i> Follow Instagram</button>
+            <button class="join_instagram_2"><i class="fa-brands fa-instagram"></i> Follow Instagram-2</button>
             <br><br>
             <button class="subscribe_youtube"><i class="fa-brands fa-youtube"></i> Subscribe to Youtube</button>
             <br><br>
